[gd_scene load_steps=5 format=3 uid="uid://cyidivelaw0y7"]

[ext_resource type="Script" path="res://Scripts/CharacterBody2D.gd" id="1_uxv8l"]
[ext_resource type="Texture2D" uid="uid://bo4uvesxfoecg" path="res://Assets/Sprites/icon.svg" id="2_ql7i6"]
[ext_resource type="Script" path="res://Scripts/Camera2D.gd" id="3_6d21h"]
[ext_resource type="PackedScene" uid="uid://cki3rn1jceoxt" path="res://dash.tscn" id="4_5gcyh"]

[node name="CharacterBody2D" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_uxv8l")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.0625, 0.0625)
texture = ExtResource("2_ql7i6")

[node name="CollisionPlygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-4, 3, -4, -3, -3, -4, 3, -4, 4, -3, 4, 3, 3, 4, -3, 4)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target")]
zoom = Vector2(6, 6)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("3_6d21h")
target = NodePath("..")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(8, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 1.05

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Dash" parent="." instance=ExtResource("4_5gcyh")]

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
